fix: Removed flex: 1 from .nucleus-control-panel-sidebar, which was causing horizintally-aligned control sidebar height to be ignored.

--- a/Nucleus.Web/Resources/css/admin.css
+++ b/Nucleus.Web/Resources/css/admin.css
@@ -246,7 +246,7 @@ body
 .nucleus-control-panel-sidebar
 {
   max-width: var(--control-panel-size);
-  flex: 1;
+  /*flex: 1;*/
   margin: 0;
   color: white;
   display: flex;
